// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component Masquerade Should render form as expected 1`] = `
<StandardPage
  title="Masquerade"
>
  <StandardCard
    noHeader={true}
  >
    <ForwardRef(Grid)
      container={true}
      spacing={1}
    >
      <ForwardRef(Grid)
        id="masquerade"
        item={true}
        xs={12}
      >
        <ForwardRef(Typography)>
          <span>
            <strong>
              WARNING!!
            </strong>
             When masquerading as a user, you will effectively become that user, and changes you make will apply to the account!
          </span>
        </ForwardRef(Typography)>
        <ForwardRef(Grid)
          alignItems="flex-end"
          container={true}
          spacing={3}
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <ForwardRef(Grid)
            item={true}
            xs={true}
          >
            <ForwardRef(TextField)
              data-testid="masquerade-userName"
              fullWidth={true}
              id="userName"
              label="Enter a UQ staff or student username (eg. uqjsmith1 or s123456)"
              onChange={[Function]}
              onKeyPress={[Function]}
              value=""
              variant="standard"
            />
          </ForwardRef(Grid)>
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              data-testid="masquerade-submit"
              disabled={false}
              fullWidth={true}
              id="submitMasquerade"
              onClick={[Function]}
              variant="contained"
            >
              Masquerade
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </StandardCard>
</StandardPage>
`;

exports[`Component Masquerade Should render readonly description 1`] = `
<StandardPage
  title="Masquerade"
>
  <StandardCard
    noHeader={true}
  >
    <ForwardRef(Grid)
      container={true}
      spacing={1}
    >
      <ForwardRef(Grid)
        id="masquerade"
        item={true}
        xs={12}
      >
        <ForwardRef(Typography)>
          <span>
            <strong>
              NOTE:
            </strong>
             As a read-only masquerader, you can view all parts of the profile, but you are not able to make any changes to the account.
          </span>
        </ForwardRef(Typography)>
        <ForwardRef(Grid)
          alignItems="flex-end"
          container={true}
          spacing={3}
          style={
            Object {
              "marginTop": 12,
            }
          }
        >
          <ForwardRef(Grid)
            item={true}
            xs={true}
          >
            <ForwardRef(TextField)
              data-testid="masquerade-userName"
              fullWidth={true}
              id="userName"
              label="Enter a UQ staff or student username (eg. uqjsmith1 or s123456)"
              onChange={[Function]}
              onKeyPress={[Function]}
              value=""
              variant="standard"
            />
          </ForwardRef(Grid)>
          <ForwardRef(Grid)
            item={true}
            sm="auto"
            xs={12}
          >
            <ForwardRef(Button)
              color="primary"
              data-testid="masquerade-submit"
              disabled={false}
              fullWidth={true}
              id="submitMasquerade"
              onClick={[Function]}
              variant="contained"
            >
              Masquerade
            </ForwardRef(Button)>
          </ForwardRef(Grid)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </StandardCard>
</StandardPage>
`;
